# jacobi_iteration_example

./: .gitignore  CMakeLists.txt  README.md  common_setup.h  mpi_multi_cpu.cpp  mpi_multi_cpu_gauss_seidel.cpp  mpi_single_cpu.cpp  mpi_single_cpu_gauss_seidel.cpp  openmp_multi_cpu.cpp  openmp_multi_cpu_gauss_seidel.cpp
utils/: debug_print.h  matrix_utils.cpp  matrix_utils.h
